# ScriptedMeshExperiment

./: .gitignore  Cargo.toml  Readme.md  test.rhai
examples/basic/: basic.rhai  main.rs
examples/cube/: cube.rhai
examples/sphere/: sphere.rhai
src/: lib.rs
