[package]
name = "scripted_mesh_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = "1.16.3"
glam = { version = "0.24.1", features = ["bytemuck"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bevy = "0.12.0"
bevy_panorbit_camera = "0.9.0"
egui = "0.23.0"
bevy_egui = "0.23.0"
bevy_rapier3d = "0.22.0"
